--- a/imdb_reviews/prepare_dataset.ipynb
+++ b/imdb_reviews/prepare_dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -35,8 +35,8 @@
     "def clean_review(review_text):\n",
     "    from bs4 import BeautifulSoup \n",
     "    import codecs\n",
-    "    text = BeautifulSoup(review_text, \"html.parser\").get_text()\n",
-    "    return codecs.getdecoder('unicode_escape')(text)[0]"
+    "    text = BeautifulSoup(review_text, \"html.parser\").get_text().lower()[1:-1]\n",
+    "    return text.encode('utf-8').decode('string_escape')"
    ]
   },
   {
@@ -54,11 +54,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with open('../datasets/imdb_reviews.pickle', 'wb') as pcl_file:\n",
+    "with open('../datasets/imdb_reviews.pcl2', 'wb') as pcl_file:\n",
     "    import pickle\n",
     "    pickle.dump(dataset, pcl_file)"
    ]
@@ -66,21 +66,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
