--- a/notmnist/notmnist.ipynb
+++ b/notmnist/notmnist.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "with open('../datasets/notmnist.pickle', 'rb') as pickle_file:\n",
+    "with open('../datasets/notmnist.pcl3', 'rb') as pickle_file:\n",
     "    import pickle\n",
     "    dataset = pickle.load(pickle_file)"
    ]
