Change the pickled dataset

--- a/imdb_reviews/prepare_dataset.ipynb
+++ b/imdb_reviews/prepare_dataset.ipynb
@@ -17,16 +17,38 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('../datasets/imdb_reviews.tsv', sep='\\t', quoting=csv.QUOTE_NONE)"
+    "def remove_enclosing_quotes(s):\n",
+    "    return s[1:-1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from dplython import DplyFrame, X, mutate, select, rename\n",
+    "\n",
+    "dataset = DplyFrame(pd.read_csv('../datasets/imdb_reviews.tsv', sep='\\t', quoting=csv.QUOTE_NONE))\n",
+    "dataset = (dataset >> \n",
+    "           mutate(id=X.id.map(remove_enclosing_quotes),\n",
+    "                  review=X.review.map(remove_enclosing_quotes)))\n",
+    "id_rating = dataset['id'].str.split('_', expand=True)\n",
+    "dataset = pd.concat((dataset, id_rating), axis=1)\n",
+    "dataset = (dataset >> \n",
+    "           select(X[0], X[1], X.sentiment, X.review) >>\n",
+    "           rename(id=X[0], rating=X[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -34,25 +56,44 @@
    "source": [
     "def clean_review(review_text):\n",
     "    from bs4 import BeautifulSoup \n",
+    "    import nltk.data\n",
+    "    from nltk.corpus import stopwords\n",
     "    import codecs\n",
-    "    text = BeautifulSoup(review_text, \"html.parser\").get_text().lower()[1:-1]\n",
-    "    return text.encode('utf-8').decode('string_escape')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "dataset['review'] = dataset['review'].map(clean_review)"
+    "    \n",
+    "    tokenizer = nltk.data.load('tokenizers/punkt/english.pickle')\n",
+    "    \n",
+    "    text = BeautifulSoup(review_text, \"html.parser\").get_text().lower().encode('utf-8').decode('string_escape')\n",
+    "    sentences = tokenizer.tokenize(text.strip().decode('utf-8'))\n",
+    "    \n",
+    "    return [[w for w in s.split() if w not in stopwords.words('english')] for s in sentences if len(s) > 0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cleaning reviews: 100%|██████████| 25000/25000 [12:38<00:00, 32.97it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm, tqdm_notebook\n",
+    "\n",
+    "tqdm.pandas(tqdm_notebook, desc='Cleaning reviews')\n",
+    "\n",
+    "dataset['review'] = dataset['review'].progress_map(clean_review)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +101,7 @@
    "source": [
     "with open('../datasets/imdb_reviews.pcl2', 'wb') as pcl_file:\n",
     "    import pickle\n",
-    "    pickle.dump(dataset, pcl_file)"
+    "    pickle.dump(pd.DataFrame(dataset), pcl_file)"
    ]
   }
  ],
